# ShineEngine

./: .clang-format  .clangd  .gitignore  Build.bat  CMakeLists.txt  PR_工作流程指南.md  Register.bat  analyze_lib.py  imgui.ini  tsconfig.json  工具函数参考.md
.trae/rules/: c.md
.trae/skills/: build-shine.md  shine-engine.md
Module/: _template.json  constexpr_.json  jpeg.json  json.md  lodepng.json  math.json  obj.json  png.json  shine_define.json  texture.json
Module/Program/: smallwasm.json
Module/editor/: editorWidget.json
Module/gameplay/: tick.json
Module/image/: webp.json
Module/launch/: EngineLauncher.json  launcher.json
Module/loader/: gltf_loader.json  loader.json
Module/memory/: memory.json
Module/test/: SimplePerfTest.json
Module/third/: fast_float.json  fmt.json  imgui.json  mimalloc.json  minizip.json  quickjs.json  yyjson.json
Module/util/: base64.json  byte_convert.json  file_util.json  fps_controller.json  guid.json  memory_util.json  path_util.json  profiler.json  shineLog.json  shine_json.json  singleton.json  string_util.json  thread.json  timer.json  url_util.json
Module/wasm/: wasm.json
Program/launch/: launcher.cpp  launcher_gui.cpp  launcher_gui.h
Program/smallwasm/: CMakeLists.txt  build-wasm-debug.bat  build-wasm.bat
Program/smallwasm/src/: gl_ctx.cpp  logfmt.h
Program/smallwasm/src/Container/: SArray.h  SVector.h
Program/smallwasm/src/demo/: demo_game.cpp  demo_game.h
Program/smallwasm/src/engine/: engine.cpp  engine.h
Program/smallwasm/src/game/: component.h  game.h  node.h  object.cpp  object.h  render_context.h  scene.h  sprite_renderer.h  transform.h
Program/smallwasm/src/graphics/: command_buffer.cpp  command_buffer.h  gl_api.cpp  gl_api.h  renderer_2d.cpp  renderer_2d.h  texture_manager.cpp  texture_manager.h  wasm_command_buffer.cpp  wasm_command_buffer.h
Program/smallwasm/src/math/: Matrix4.h  Vector3.h
Program/smallwasm/src/ui/: button.h  image.h  style.h  ui.h  ui_manager.cpp  ui_manager.h
Program/smallwasm/src/util/: Input_Manager.h  logger.h  math_def.h  stat.h  tex_loader.h  timer.h  wasm_compat.h  wasm_runtime.cpp
Program/smallwasm/tools/: dwarf_report.py  map_report.ps1  run_wasm_analysis.ps1  wasm_size_merge.py
Program/smallwasm/web/: debug_utils.js  index.html  index.js  stats_debug.js
Templates/BlankGame/: project.json
docs/: lib_size.ps1  module.schema.json  test.md  tick_system_taskbook.md  tick_system_usage.md  工具函数参考.md
feature/quickjs/: loadjs.h  test.h
script/: game.ts
src/: ShineEngine.cpp  launcher.cpp
src/EngineCore/: engine_context.cpp  engine_context.h  module.h  subsystem.h
src/EngineCore/reflection/: ObjectHandle.cpp  ObjectHandle.h  QuickJSIntegration.cpp  QuickJSIntegration.h  Reflection.h  ReflectionConcept.h  ReflectionFlags.h  ReflectionHash.h  ReflectionScript.h  ReflectionUI.h  Serializer.cpp  Serializer.h
src/Game/: GameManager.h  World.h
src/constexpr/: constexpr_map.h  constexpr_str.h  constexpr_vector.h  iterator.h
src/data/: file_type.h  gltf_data.h  platformDef.h
src/data/structure/: safe_queue.h
src/editor/: mainEditor.cpp  mainEditor.h
src/editor/browers/: AssetsBorwer.cpp  AssetsBrower.h  AssetsItem.cpp  AssetsItem.h
src/editor/editorPlayer/: editor_play.cpp  editor_play.h
src/editor/feature/: imageViewer.cpp  imageViewer.h
src/editor/settings/: EngineSettings.h
src/editor/util/: FpsControlView.cpp  FpsControlView.h  InspectorBuilder.cpp  InspectorBuilder.h  PropertyDrawer.cpp  PropertyDrawer.h  StaticInspector.h
src/editor/views/: EditorView.cpp  EditorView.h  ImageViewerView.cpp  ImageViewerView.h  PropertiesView.cpp  PropertiesView.h  SceneHierarchyView.cpp  SceneHierarchyView.h  SettingsView.cpp  SettingsView.h
src/eventpp/: eventdispatcher.h
src/gameplay/: actor.h  camera.cpp  camera.h  object.cpp  object.h  world.cpp  world.h
src/gameplay/component/: StaticMeshCompoennt.cpp  StaticMeshComponent.h  component.h
src/gameplay/mesh/: StaticMesh.cpp  StaticMesh.h
src/gameplay/scene/: scene.cpp  scene.h
src/image/: Texture.cpp  Texture.h  jpeg.cpp  jpeg.h  png.cpp  png.h  webp.cpp  webp.h
src/loader/: gltfLoader.cpp  gltfLoader.h  loader.h  objLoader.cpp  objLoader.h
src/manager/: AssetManager.cpp  AssetManager.h  CameraManager.cpp  CameraManager.h  FileWatchManager.h  InputManager.cpp  InputManager.h  PluginsManager.cpp  light_manager.h
src/math/: mathDef.h  mathFwd.h  mathUtil.cpp  mathUtil.h  matrix.cpp  matrix.h  matrix.ixx  quat.cpp  quat.h  rotator.h  vector.h  vector.ixx  vector2.h
src/memory/: memory.cpp  memory.ixx
src/model/: obj.cpp  obj.h
src/platform/: InitWindows.cpp  InitWindows.h  WindowsInfo.cpp  WindowsInfo.h
src/render/: material.h  renderManager.cpp  renderManager.h  render_backend.h  render_backend_export.h  renderer_service.cpp  renderer_service.h
src/string/: shine_string.cpp  shine_string.h  shine_text.h  shine_text_view.h
src/util/: EnumFlags.h  encoding_util.cpp  encoding_util.ixx  file_util.cpp  file_util.h  file_util.ixx  fps_controller.h  function2.hpp  getopt.h  guid.h  image_util.h  memory_util.cpp  memory_util.h  path_util.cpp  path_util.h  shineCompile.h  shine_common.h  shine_config.h  shine_define.h  singleton.cpp  singleton.h  string_util.cpp  string_util.h  string_util.ixx
src/wasm/: SArray.h
src/widget/: shineButton.cpp  shineButton.h  widgetState.h
test/SimplePerfTest/: benchmark_framework.h  main.cpp  string_test.cpp
test/TestRunner/: json_perf_test.cpp
threejs-mcp-tools/: MCP_IMPLEMENTATION_SUMMARY.md  MCP_LITE_GUIDE.md  MCP_README.md  MCP_TOOLS_LAYERED.md  MCP_TOOLS_PLAN.md  PROJECT_SUMMARY.md  README.md  TASK_PLAN.md  USAGE_GUIDE.md  demo.bat  load-tools.js  quick-start.html  split-tools.js  start-full.bat  start-lite.bat
threejs-mcp-tools/definitions/: camera.json  claude-desktop-config.json  geometry.json  index.json  light.json  material.json  object.json  renderer.json  scene.json  texture.json
threejs-mcp-tools/mcp-server/: README.md  package-lock.json  package.json
threejs-mcp-tools/mcp-server-lite/: README.md  package-lock.json  package.json
(+147 files in other folders)
